# shaigan-hr

./: README.md  pyproject.toml
shaigan_hr/: hooks.py  modules.txt
shaigan_hr/fixtures/: custom_field.json  letter_head.json  print_format.json
shaigan_hr/shaigan_hr/api/: api.py
shaigan_hr/shaigan_hr/doctype/absent_deduction_current_month/: absent_deduction_current_month.json  absent_deduction_current_month.py
shaigan_hr/shaigan_hr/doctype/arrears_table/: arrears_table.json  arrears_table.py
shaigan_hr/shaigan_hr/doctype/domain_a_table/: domain_a_table.json  domain_a_table.py
shaigan_hr/shaigan_hr/doctype/domain_b2_table/: domain_b2_table.json  domain_b2_table.py
shaigan_hr/shaigan_hr/doctype/domain_b_table/: domain_b_table.json  domain_b_table.py
shaigan_hr/shaigan_hr/doctype/essential_functions_table/: essential_functions_table.json  essential_functions_table.py
shaigan_hr/shaigan_hr/doctype/increment_incentives_table/: increment_incentives_table.json  increment_incentives_table.py
shaigan_hr/shaigan_hr/doctype/leavers_table/: leavers_table.json  leavers_table.py
shaigan_hr/shaigan_hr/doctype/less_paid_table/: less_paid_table.json  less_paid_table.py
shaigan_hr/shaigan_hr/events/: designation.py
shaigan_hr/shaigan_hr/overrides/: compensatory_leave_request.py  leave_application.js  override_additional_salary.py  override_arrears_process.py  override_attendance.py  override_employee_checkin.py  override_employee_increment.py  override_salary_slip.py  override_shift_type.py  payroll_entry.py  quarter_leave_application.py
(+34 files in other folders)
