[project]
name = "shaigan_hr"
authors = [
    { name = "Sowaan", email = "sufyan.sadiq@sowaan.com"}
]
description = "Enhanced ERP leave module to support 'Quarter Day Leave' for 0.25 days, in addition to full and half-day options."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
